--- a/resources/assets/less/print.less
+++ b/resources/assets/less/print.less
@@ -113,6 +113,10 @@ body.print{
             }
         }
 
+        .quiz-container{
+            page-break-inside: avoid;
+        }
+
         .student-instructor-details{
             display: flex;
 
